End of defining probability

--- a/Coursera/Duke University/Probability-intro/Week 3/1. Defining Probability.ipynb
+++ b/Coursera/Duke University/Probability-intro/Week 3/1. Defining Probability.ipynb
@@ -383,8 +383,222 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## Examples"
+    "## Examples\n",
+    "\n",
+    "1) The World Values Survey is an ongoing worldwide survey that polls the world population about perceptions of life, work, family, politics, etc. The most recent phase of the survey that polled 77,882 people from 57 countries estimates that 36.2% of the world's population agree with the statement \"Men should have more right to a job than women\". The survey also estimates that 13.8% of people have a university degree or higher and that 3.6% of people fit both criteria.\n",
+    "\n",
+    "I) Are agreeing with the statement, men should more right to a job than women, and having a university degree or higher disjoint events?\n",
+    "\n",
+    "<span style=\"color:navy\">\n",
+    "$P(\\text{agree}) = 0.362$<br>\n",
+    "$P(\\text{university}) = 0.138$<br>\n",
+    "$P(\\text{agree & university}) = 0.036$<br>\n",
+    "</span>  \n",
+    "<span style=\"color:navy\">\n",
+    "*Since the probability of agreeing with this statement and having a university degree or higher is not 0, the events are not disjoint.*\n",
+    "</span>  \n",
+    "\n",
+    "II) Draw a Venn diagram summarizing the variables and their associated probabilities.\n",
+    "\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/8a43171f/Coursera/Duke%20University/Probability-intro/Week%203/images/venn_agree_uni.svg\" width=\"300\" align=\"center\"/>\n",
+    "\n",
+    "<span style=\"color:navy\">\n",
+    "$\\text{Venn_agree} = P(\\text{agree}) - P(\\text{agree & university})$<br> \n",
+    "$\\text{Venn_agree} = 0.362 - 0.036$<br>\n",
+    "$\\text{Venn_agree} = 0.326$<br>\n",
+    "</span> \n",
+    "\n",
+    "<span style=\"color:navy\">\n",
+    "$\\text{Venn_university} = P(\\text{university}) - P(\\text{agree & university})$<br> \n",
+    "$\\text{Venn_university} = 0.138 - 0.036$<br>\n",
+    "$\\text{Venn_university} = 0.102$<br>\n",
+    "</span> \n",
+    "\n",
+    "III) What is the probability that a randomly drawn person has a university degree or higher or agrees with the statement about men having more right to a job than women?\n",
+    "\n",
+    "<span style=\"color:navy\">  \n",
+    "Following the general rule $P(A\\ or\\ B) = P(A) + P(B) - P(A\\ \\&\\ B)$ we have:\n",
+    "</span>\n",
+    "\n",
+    "<span style=\"color:navy\">  \n",
+    "$P(\\text{university or agree}) = P(\\text{university}) + P(\\text{agree}) - P(\\text{agree & university})$<br>\n",
+    "$P(\\text{university or agree}) = 0.138 + 0.362 - 0.036$<br>\n",
+    "$P(\\text{university or agree}) = 0.464$<br>\n",
+    "</span> \n",
+    "\n",
+    "<span style=\"color:navy\">\n",
+    "Or considering the Venn diagram, we sum the values presented in it to achieve the same result.\n",
+    "</span> \n",
+    "\n",
+    "<span style=\"color:navy\">\n",
+    "$P(\\text{university or agree}) = 0.326 + 0.036 + 0.102$<br>\n",
+    "$P(\\text{university or agree}) = 0.464$<br>\n",
+    "</span> \n",
+    "\n",
+    "IV) What percent of the world population do not have a university degree and disagree with the statement about men having more right to a job than women?\n",
+    "\n",
+    "<span style=\"color:navy\">\n",
+    "$P(\\text{neither agree nor university}) = 1 - P(\\text{agree or university})$<br>\n",
+    "$P(\\text{not university}) = 1 - 0.464$<br>\n",
+    "$P(\\text{not university}) = 0.536$<br>\n",
+    "</span> \n",
+    "\n",
+    "V) Does it appear that the event that someone agrees with the statement is independent of the event that they have a university degree or higher?\n",
+    "\n",
+    "<span style=\"color:navy\">\n",
+    "We can check the product rule that says if A and B are independent, probability of A and B is equal to probability of A times probability of B. If A and B are independent, $P(A\\ and\\ B) = P(A) \\times P(B)$. Thus,\n",
+    "</span> \n",
+    "\n",
+    "<span style=\"color:navy\">\n",
+    "$P(\\text{agree & university}) = 0.036$<br>\n",
+    "$P(\\text{agree & university}) = P(\\text{agree}) \\times P(\\text{university})$<br>\n",
+    "$P(\\text{agree & university}) = 0.362 \\times 0.138$<br>\n",
+    "$P(\\text{agree & university}) = 0.0499 \\rightarrow \\neq 0.036$<br>\n",
+    "</span> \n",
+    "\n",
+    "<span style=\"color:navy\">\n",
+    "Events are **NOT independent**!\n",
+    "</span> \n",
+    "\n",
+    "VI) What is the probability that at least 1 in 5 randomly selected people agree with the statement about men having more right to a job than women?\n",
+    "\n",
+    "<span style=\"color:navy\">\n",
+    "If selecting 5 people randomly, our sample space for the number of people who might agree with this statement range from 0 to 5. It is possible that none of them agree, just one agrees, two agree, etc., all the way to all five agree. We're interested in instances where at least one person agrees with this statement. So we can divide up the sample space into two complimentary events, none indicated by the 0 and at least 1 which covers all possible outcomes from 1 through 5. To find the probability of at least 1 out of 5 people agreeing with the statement, we simply subtract the probability of its complement, none agree, from 1. So that is 1 minus the probability of all of them disagreeing. \n",
+    "</span>\n",
+    "\n",
+    "<span style=\"color:navy\">\n",
+    "$P(\\text{agree}) = 0.362$<br>\n",
+    "$S = \\{0, 1, 2, 3, 4, 5\\} \\rightarrow S = \\{0, \\text{<at least 1>}\\}$<br>\n",
+    "$P(\\text{at least 1 agree}) = 1 - P(\\text{none agree})$<br>\n",
+    "$P(\\text{at least 1 agree}) = 1 - P(D\\ D\\ D\\ D\\ D)$<br>\n",
+    "</span>\n",
+    "\n",
+    "<span style=\"color:navy\">\n",
+    "First we need to figure out what is the probability that any given person disagrees with the statement? That is also going to be a complement, and it's the complement of the probability of agreeing.\n",
+    "</span>\n",
+    "\n",
+    "<span style=\"color:navy\">\n",
+    "$P(\\text{disagree}) = 1 - P(\\text{agree})$<br>\n",
+    "$P(\\text{disagree}) = 1 - 0.362$<br>\n",
+    "$P(\\text{disagree}) = 0.638$<br>\n",
+    "</span>\n",
+    "\n",
+    "<span style=\"color:navy\">\n",
+    "Plugging that back into the formula, we have 1 minus 0.638 to the 5th power. We can multiply each one of these probabilities because we know that whether one person in our group disagrees with the statement is independent of another because we're randomly sampling them.\n",
+    "</span>\n",
+    "\n",
+    "<span style=\"color:navy\">\n",
+    "$P(\\text{at least 1 agree}) = 1 - P(D\\ D\\ D\\ D\\ D)$<br>\n",
+    "$P(\\text{at least 1 agree}) = 1 - 0.638^5$<br>\n",
+    "$P(\\text{at least 1 agree}) = 1- 0.1057$<br>\n",
+    "$P(\\text{at least 1 agree}) = 0.8943$<br>\n",
+    "</span>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Questions\n",
+    "\n",
+    "1) Given the probabilities below and the accompanying Venn diagram, what percent of the world population have a university degree or higher and disagree with the statement about men having more right to a job than women?  \n",
+    "\n",
+    "<img src=\"images/venn_q1.png\" width=\"300\" align=\"center\"/>\n",
+    "\n",
+    "P(agree) = 0.362  \n",
+    "P(uni. degree) = 0.138  \n",
+    "P(agree & uni. degree) = 0.036  \n",
+    "\n",
+    "&#9744; $1 - 0.138 = 0.862 \\rightarrow 86.2%$  \n",
+    "&#9745; $0.102 \\rightarrow 10.2%$  \n",
+    "&#9744; $0.326 \\rightarrow 32.6%$  \n",
+    "&#9744; $0.362 + 0.138 = 0.5 \\rightarrow 50%$ \n",
+    "\n",
+    "2) Given that 36.2% of the world population agrees with the statement about men having more right to a job than women, what is the probability that in a random sample of 5 randomly selected people all of them agree with the statement?  \n",
+    "&#9745; $0.362^5 \\approx 0.006$  \n",
+    "&#9744; $0.362 \\times 5 = 1.81$  \n",
+    "&#9744; $\\frac{0.362}{5} = 0.0724$  \n",
+    "\n",
+    "*Solving:*  \n",
+    "$P(\\text{agree}) = 0.362$<br>\n",
+    "$P(\\text{5 agree}) = P(\\text{agree}_1 \\text{and agree}_2 \\text{and agree}_3 \\text{and agree}_4 \\text{and agree}_5)$<br> \n",
+    "$P(\\text{5 agree}) = P(\\text{agree}_1) \\times P(\\text{agree}_2) \\times P(\\text{agree}_3) \\times P(\\text{agree}_4) \\times P(\\text{agree}_5)$<br>\n",
+    "$P(\\text{5 agree}) = 0.362^5$<br>\n",
+    "$P(\\text{5 agree}) = 0.0062$<br>\n",
+    "\n",
+    "3) Given that 13.8% of the world population have a university degree or higher, what is the probability that in a random sample of 3 people at least one person has a university degree or higher?  \n",
+    "&#9744; $1 - 0.138 = 0.862$  \n",
+    "&#9744; $1 - 0.1383 \\approx 0.997$  \n",
+    "&#9745; $1 - (1 - 0.138)^3 \\approx 0.359$  \n",
+    "&#9744; $(1 - 0.138)^3 \\approx 0.641$  \n",
+    "&#9744; $0.138 \\times 3 = 0.414$  \n",
+    "\n",
+    "*Solving:*  \n",
+    "$P(\\text{university}) = 0.138$<br>\n",
+    "$S = \\{0, 1, 2, 3\\} \\rightarrow S = \\{0, \\text{<at least 1>}\\}$<br>\n",
+    "$P(\\text{at least 1}) = 1 - P(\\text{none has university})$<br>\n",
+    "$P(\\text{at least 1}) = 1 - P(\\text{NU NU NU})$ #NU : no univesity<br>\n",
+    "$P(\\text{no university}) = 1 - P(\\text{university})$<br>\n",
+    "$P(\\text{no university}) = 1 - 0.138$<br>\n",
+    "$P(\\text{no university}) = 0.862$<br>\n",
+    "$P(\\text{NU NU NU}) = P(\\text{no university})^3$<br>\n",
+    "$P(\\text{NU NU NU}) = 0.6405$<br>\n",
+    "$P(\\text{at least 1}) = 1 - P(\\text{NU NU NU})$<br>\n",
+    "$P(\\text{at least 1}) = 1 - 0.6405$<br>\n",
+    "$P(\\text{at least 1}) = 0.3594$<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Spotlight: Disjoint vs. Indpendent Events\n",
+    "\n",
+    "Two events that are disjoint cannot happen at the same time. While two processes are independent if knowing the outcome of one provides no useful information about the outcome of the other. So disjointness is about events happening at the same time. So if events `A` and `B` are **disjoint**, \n",
+    "\n",
+    "$$P(A\\ and\\ B) = 0$$ \n",
+    "\n",
+    "While independence is about processes not affecting each other. So if events `A` and `B` are **independent**, \n",
+    "\n",
+    "$$P(A\\ |\\ B) = P(A)$$ \n",
+    "\n",
+    "Say we're interested in the eye color of babies. And the only possibilities are:  \n",
+    "- blue \n",
+    "- green\n",
+    "- brown\n",
+    "\n",
+    "Suppose there's one baby, the possible eye colors are blue, green, and brown. These outcomes are **disjoints, since they can not happen at the same time**.  \n",
+    "\n",
+    "Now suppose there are two babies, and suppose that we know that the first one has brown eyes. The possibilities for the second one are, again, blue, green, and brown. These three outcomes for the second baby are also disjoint from each other. However, the eye color of the first and second baby may be dependent or independent depending on whether the babies are related or randomly drawn from the population. If the babies are related and we know that one has brown eyes, the other one is going to be more likely to also have brown eyes. But if not related and they're randomly drawn from the population, the fact that the first one has brown eyes will not provide any useful information about the second one having blue eyes.  \n",
+    "\n",
+    "One last item to note is that the disjoint outcomes, the color of one baby's eyes, blue, green, or brown, are also **dependent** on each other. Because if we know that the baby has blue eyes, we also know that it doesn't have green or brown eyes. We can generalize this to say that **disjoint events with non-zero probability are always dependent on each other**. Because if we know that one happened, we know that the other one cannot happen. \n",
+    "\n",
+    "<!--\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/8a43171f/Coursera/Duke%20University/Probability-intro/Week%203/images/disjoint_independent.svg\" width=\"800\" align=\"center\"/>\n",
+    "-->\n",
+    "<img src=\"images/disjoint_independent.svg\" width=\"800\" align=\"center\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Questions\n",
+    "\n",
+    "1) Which of the following is true? Assume a fair coin.  \n",
+    "&#9744; Outcomes of one coin toss are disjoint and independent; outcomes of two coin tosses are dependent.  \n",
+    "&#9745; Outcomes of one coin toss are disjoint and dependent; outcomes of two coin tosses are independent.  \n",
+    "&#9744; Outcomes of one coin toss are disjoint and dependent; outcomes of two coin tosses are also dependent.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
