--- a/Coursera/Duke University/Probability-intro/Week 3/1. Defining Probability.ipynb
+++ b/Coursera/Duke University/Probability-intro/Week 3/1. Defining Probability.ipynb
@@ -573,10 +573,7 @@
     "\n",
     "One last item to note is that the disjoint outcomes, the color of one baby's eyes, blue, green, or brown, are also **dependent** on each other. Because if we know that the baby has blue eyes, we also know that it doesn't have green or brown eyes. We can generalize this to say that **disjoint events with non-zero probability are always dependent on each other**. Because if we know that one happened, we know that the other one cannot happen. \n",
     "\n",
-    "<!--\n",
-    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/8a43171f/Coursera/Duke%20University/Probability-intro/Week%203/images/disjoint_independent.svg\" width=\"800\" align=\"center\"/>\n",
-    "-->\n",
-    "<img src=\"images/disjoint_independent.svg\" width=\"800\" align=\"center\"/>"
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/b30300c5/Coursera/Duke%20University/Probability-intro/Week%203/images/disjoint_independent.svg\" width=\"800\" align=\"center\"/>"
    ]
   },
   {
