--- a/Coursera/Duke University/Probability-intro/Week 3/1. Defining Probability.ipynb
+++ b/Coursera/Duke University/Probability-intro/Week 3/1. Defining Probability.ipynb
@@ -505,14 +505,14 @@
     "\n",
     "<img src=\"images/venn_q1.png\" width=\"300\" align=\"center\"/>\n",
     "\n",
-    "P(agree) = 0.362  \n",
-    "P(uni. degree) = 0.138  \n",
+    "$P(agree) = 0.362  \n",
+    "$P(uni. degree) = 0.138  \n",
     "P(agree & uni. degree) = 0.036  \n",
     "\n",
-    "&#9744; $1 - 0.138 = 0.862 \\rightarrow 86.2%$  \n",
-    "&#9745; $0.102 \\rightarrow 10.2%$  \n",
-    "&#9744; $0.326 \\rightarrow 32.6%$  \n",
-    "&#9744; $0.362 + 0.138 = 0.5 \\rightarrow 50%$  \n",
+    "&#9744; $1 - 0.138 = 0.862 \\rightarrow 86.2\\%$  \n",
+    "&#9745; $0.102 \\rightarrow 10.2\\%$  \n",
+    "&#9744; $0.326 \\rightarrow 32.6\\%$  \n",
+    "&#9744; $0.362 + 0.138 = 0.5 \\rightarrow 50\\%$  \n",
     "\n",
     "2) Given that 36.2% of the world population agrees with the statement about men having more right to a job than women, what is the probability that in a random sample of 5 randomly selected people all of them agree with the statement?  \n",
     "&#9745; $0.362^5 \\approx 0.006$  \n",
