Class of Conditional Probability

--- a/Coursera/Duke University/Probability-intro/Week 3/2. Conditional Probability.ipynb
+++ b/Coursera/Duke University/Probability-intro/Week 3/2. Conditional Probability.ipynb
@@ -68,7 +68,7 @@
     "\n",
     "We calculate conditional probabilities using Baye's Theorem, which states that probability of `A` given `B` is probability of `A` and `B` divided by probability of `B`. So that's the joint probability on the numerator divided by what you're conditioning on in the denominator.\n",
     "\n",
-    "$$P(A\\ |\\ B) = \\frac{P(A\\ \\&\\ B)}{P(B)}$$\n",
+    "$$P(A\\ |\\ B) = \\frac{P(A\\ \\text{&}\\ B)}{P(B)}$$\n",
     "\n",
     "Using the previous question, the probability of subjective upper middle class (SUMC) given objective working class (OWC) is going to be equal to the joint probability of subjective upper middle class and objective working class `P(SUMC & OWC)`, divided by probability of objective working class `P(OWC)`, what we're conditioning on.\n",
     "\n",
@@ -88,13 +88,13 @@
     "\n",
     "Since Bayes' Theorem does not have an independent condition, we can actually simply rearrange it and calculate the joint probability of `A` and `B` as a product of the conditional probability of `A` given `B` `P(A | B)`, multiplied by the marginal probability of `B` `P(B)`. So all we've done is taken the Bayes' Theorem, shuffled things around, and come up with a new rule for calculating joint probabilities.\n",
     "\n",
-    "$$P(A\\ |\\ B) = \\frac{P(A\\ \\&\\ B)}{P(B)}\\ \\ \\ \\rightarrow\\ \\ \\ P(A\\ \\&\\ B) = P(A\\ |\\ B) \\times P(B)$$\n",
+    "$$P(A\\ |\\ B) = \\frac{P(A\\ \\text{&}\\ B)}{P(B)}\\ \\ \\ \\rightarrow\\ \\ \\ P(A\\ \\text{&}\\ B) = P(A\\ |\\ B) \\times P(B)$$\n",
     "\n",
     "Generically, if `P(A | B) = P(A)`, then the events `A` and `B` are said to be independent. We can explain this in two ways.  \n",
     "- Conceptually: `B` tells us nothing about `A`, then `A` and `B` are independent, meaning that, whether we have the probability with `B` given, or not, the probabilities are exactly the same.\n",
     "- Mathematically: if events `A` and `B` are independent, then `P(A and B) = P(A) x P(B)`. Then,\n",
     "\n",
-    "$$P(A\\ |\\ B) = \\frac{P(A\\ \\&\\ B)}{P(B)} = \\frac{P(A) \\times P(B)}{P(B)} = P(A)$$\n",
+    "$$P(A\\ |\\ B) = \\frac{P(A\\ \\text{&}\\ B)}{P(B)} = \\frac{P(A) \\times P(B)}{P(B)} = P(A)$$\n",
     "\n",
     "\n",
     "### Example\n",
