--- a/Coursera/Duke University/Probability-intro/Week 3/2. Conditional Probability.ipynb
+++ b/Coursera/Duke University/Probability-intro/Week 3/2. Conditional Probability.ipynb
@@ -181,17 +181,99 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## Probability Trees"
+    "## Probability Trees\n",
+    "\n",
+    "Consider the folowing problem:\n",
+    "\n",
+    "*You have 100 emails in your inbox, 60 of them are spam, and 40 are not. Of the 60 spam emails, 35 contain the word \"free\". Of the rest, only 3 contain the word \"free\". If an email contains the word \"free\", what is the probability that it is spam?*\n",
+    "\n",
+    "Given that information, we can build the probability tree by dividing our population, our inbox in this case is our population, into two, based on whether the email is spam or not spam. So we have 60 emails that are spam, and 40 emails that are not spam. Now that we've done this branching, we can actually further branch out from these and list how many of the spam emails have the word free in them and how many of them do not, and likewise for the no spam, non-spam emails. Of the 60 spam emails, 35 have the word free in it, and of, and the remainder 25 do not. And of the not spam emails, only three of them have the word free in it, and 37 do not. The generated tree results as:\n",
+    "\n",
+    "<img src=\"images/probability_tree.svg\" align=\"center\" width=\"500\"/>\n",
+    "\n",
+    "Calculating the probability that the email containing the word \"free\" is a spam:\n",
+    "\n",
+    "$P(\\text{spam}) = \\frac{60}{100} = 0.6$<br>\n",
+    "$P(\\text{free}) = \\frac{(35+3)}{100} = 0.38$<br>\n",
+    "$P(\\text{spam & free}) = \\frac{35}{100} = 0.35$<br>\n",
+    "$P(\\text{spam | free}) = \\frac{P(\\text{spam & free})}{P(\\text{free})}$<br>\n",
+    "$P(\\text{spam | free}) = \\frac{0.35}{0.38} = 0.9211$<br>\n",
+    "\n",
+    "\n",
+    "Consider the following problem:  \n",
+    "*Swaziland, has the highest HIV problems in the world, since 25.9% of this country's population is infected with HIV. The ELISA test is one of the first and most accurate tests for HIV. For those who carry HIV, the ELISA test is 99.7% accurate. For those who do not carry HIV, the test is 92.6% accurate. If an individual from Swaziland has tested positive, what is the probability that he carries HIV?*\n",
+    "\n",
+    "Let's write down the given probabilities: \n",
+    "\n",
+    "$P(\\text{HIV}) = 0.259$<br>\n",
+    "$P(\\text{positive | HIV}) = 0.997$<br>\n",
+    "$P(\\text{negative | not HIV}) = 0.92.6$<br>\n",
+    "\n",
+    "Then the question is what is $P(\\text{HIV | positive})$? Thus, let's build the tree diagram: \n",
+    "\n",
+    "<img src=\"images/probability_tree_hiv.svg\" align=\"center\" width=\"700\"/>\n",
+    "\n",
+    "Using the Bayes' theorem, we know that:\n",
+    "\n",
+    "$$P(\\text{HIV | positive}) = \\frac{P(\\text{HIV & positive})}{P(\\text{positive})}$$\n",
+    "\n",
+    "To get the join probabilities, like the one in the numerator, using the probability true, all we need to do is multiply across the branches. This is why a probability tree is useful. Because it organizes the information for you in a way where you'd no longer have to think, what should I multiply with what. And you, all you need to do is carry along the branches and pick up the building blocks along the way. Thus: \n",
+    "\n",
+    "$P(\\text{HIV & positive}) = P(\\text{HIV}) \\times P(\\text{positive | HIV})$<br>\n",
+    "$P(\\text{HIV & positive}) = 0.259 \\times 0.997$<br>\n",
+    "$P(\\text{HIV & positive}) = 0.2582$<br>\n",
+    "\n",
+    "We also must calculate the probability of *positive* and *not HIV* in order to find the marginal probability `P(positive)`, which is the sum of the conditional probabilities where it occurs.\n",
+    "\n",
+    "$P(\\text{not HIV & positive}) = P(\\text{not HIV}) \\times P(\\text{positive | not HIV})$<br>\n",
+    "$P(\\text{not HIV & positive}) = 0.741 \\times 0.074$<br>\n",
+    "$P(\\text{not HIV & positive}) = 0.0548$<br>\n",
+    "\n",
+    "$P(\\text{positive}) = P(\\text{HIV & positive}) + P(\\text{not HIV & positive})$<br>\n",
+    "$P(\\text{positive}) = 0.2582 + 0.0548 = 0.3130$<br>\n",
+    "\n",
+    "Finally, we can calculate the probability asked in the question $P(\\text{HIV | positive})$ as:\n",
+    "\n",
+    "$P(\\text{HIV | positive}) = \\frac{P(\\text{HIV & positive})}{P(\\text{positive})}$<br>\n",
+    "$P(\\text{HIV | positive}) = \\frac{0.2582}{0.3130} = 0.8249 \\approx 82\\%$<br>"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Questions\n",
+    "\n",
+    "1) Is the accuracy of the test dependent on or independent of whether the patient has the disease?  \n",
+    "&#9745; Dependent  \n",
+    "&#9744; Independent  \n",
+    "\n",
+    "2) Given the probability tree below, what is the probability that a randomly chosen person from Swaziland tests negative?  \n",
+    "\n",
+    "<img src=\"images/exerc_2.3.png\" align=\"center\" width=\"500\"/>\n",
+    "\n",
+    "&#9744; $0.003 + 0.926 = 0.929$  \n",
+    "&#9745; $0.0008 + 0.6862 = 0.687$  \n",
+    "&#9744; $\\frac{0.0008}{(0.0008 + 0.6862)} \\approx 0.0012$  \n",
+    "&#9744; $\\frac{0.6862}{(0.0008 + 0.6862)} \\approx 0.9988$  \n",
+    "&#9744; 40.2582 + 0.0548 = 0.313$  \n",
+    "\n",
+    "*Solving:*\n",
+    "\n",
+    "$P(\\text{negative}) = P(\\text{HIV and negative}) +  P(\\text{not HIV and negative})$<br>\n",
+    "$P(\\text{negative}) = 0.0008 + 0.6862 = 0.687$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Bayesian Inference\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
