added bayesian inference

--- a/Coursera/Duke University/Probability-intro/Week 3/2. Conditional Probability.ipynb
+++ b/Coursera/Duke University/Probability-intro/Week 3/2. Conditional Probability.ipynb
@@ -262,7 +262,7 @@
     "\n",
     "*Solving:*\n",
     "\n",
-    "$P(\\text{negative}) = P(\\text{HIV and negative}) + P(\\text{not HIV and negative})$ <br>\n",
+    "$P(\\text{negative}) = P(\\text{HIV and negative}) + P(\\text{not HIV and negative})$<br>\n",
     "$P(\\text{negative}) = 0.0008 + 0.6862 = 0.687$"
    ]
   },
@@ -272,8 +272,93 @@
    "source": [
     "---\n",
     "## Bayesian Inference\n",
-    "\n"
+    "\n",
+    "In this part, we will virtually play a game to introduce a Bayesian approach to inference.\n",
+    "\n",
+    "**Setup**: I have a die in each hand, one of them is a six-sided die and the other one is a 12-sided die. The ultimate goal of the game is to guess which hand is holding which die, but this is more than just a guessing game. Before you make a final decision, you will be able to collect data by asking me to roll the die in one hand, and I'll tell you whether the outcome of the roll is greater than or equal to 4. \n",
+    "\n",
+    "*What is the probability of rolling a value greater than or equal to 4 with a six-sided die?*  \n",
+    "With a six-sided die, the sample space is made up of numbers between 1 and 6. We're interested in an outcome greater than or equal to 4, the probability of getting such an outcome is then 3 out of 6, or 1 out of 2 or, 50%.\n",
+    "\n",
+    "$S_{6side} = \\{1, 2, 3, 4, 5, 6\\}\\ \\ \\ \\rightarrow\\ \\ \\ P(\\ge4) = 3/6 = 1/2$<br>\n",
+    "\n",
+    "*What is that probability with a 12-sided die?*  \n",
+    "With a 12-sided die, the sample space is bigger, number is between 1 and 12. And once again, we're interested in outcomes 4 or greater. The probability of getting such an outcome is 9 out of 12, or $\\frac{3}{4} = 75\\%$. \n",
+    "\n",
+    "$S_{12side} = \\{1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12\\}\\ \\ \\ \\rightarrow\\ \\ \\ P(\\ge4) = 9/12 = 3/4$<br>  \n",
+    "\n",
+    "We chose the right hand, and we won (rolled a number $\\gt4$). Having observed this data point, we have the probability tree:\n",
+    "\n",
+    "<img src=\"images/bayesian_inference_tree.svg\" align=\"center\" width=\"500\"/>\n",
+    "\n",
+    "If we want to find this probability, it's a conditional probability, we can make use of the Bayes' theorem. Which basically says, if you're looking for A given B, find the joint probability of A and B `P(A and B)`, divided by the marginal probability of B `P(B)`. So we have:\n",
+    "\n",
+    "$P(\\text{Good die on the right | we rolled }\\gt4\\text{ on the right hand}) = \\frac{\\text{Good Right & }\\gt4\\text{ Right}}{\\gt4\\text{ Right}}$<br>\n",
+    "$P(\\text{Good die on the right | we rolled }\\gt4\\text{ on the right hand}) = \\frac{0.375}{0.375+0.25}$<br>\n",
+    "$P(\\text{Good die on the right | we rolled }\\gt4\\text{ on the right hand}) = 0.6$<br>\n",
+    "\n",
+    "### Posterior\n",
+    "\n",
+    "The probability we just calculated is also called the posterior probability:\n",
+    "\n",
+    "$$P(\\text{Good die on the right | we rolled }\\gt4\\text{ on the right hand})$$ \n",
+    "\n",
+    "Posterior probability is generally defined as probability of the hypothesis given the data. \n",
+    "\n",
+    "$$P(\\text{hypothesis | data})$$\n",
+    "\n",
+    "In other words, it's the probability of a hypothesis we set forth, given the data we just observed. It depends on both the prior probability we set and the observed data. This is the opposite of the probability of observed data, given the null hypothesis being true `P(data | hypothesis)`. In other words, the probability of data given the hypothesis, which we had called a `p-value`.\n",
+    "\n",
+    "### Updating the Prior\n",
+    "\n",
+    "In the Bayesian approach, we evaluate claims iteratively as we collect more data. In the next iteration, the next roll, if we were to play this game one more time, and you had asked me to roll a die on either the right or the left hand again, and we had done the calculation of the posterior one more time. We get to take advantage of what we learned from the data. In other words, we **update** our prior with our posterior probability from the previous iteration. So, in the next iteration, our updated prior for the first hypothesis being true is going to be the 60%, the posterior from the previous iteration. And the compliment of that, 40%, is going to be the probability of the competing hypothesis. \n",
+    "\n",
+    "<img src=\"images/updated_prior.svg\" align=\"center\" width=\"300\"/>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###Questions:\n",
+    "\n",
+    "1) What is the probability of rolling ≥4 with a 6-sided die? What about with a 12-sided die?  \n",
+    "&#9744; 6-sided: 3/4; 12-sided: 1/2  \n",
+    "&#9744; 6-sided: 1/3; 12-sided: 2/3  \n",
+    "&#9744; 6-sided: 1/3; 12-sided: 3/4  \n",
+    "&#9745; 6-sided: 1/2; 12-sided: 3/4  \n",
+    "&#9744; 6-sided: 2/3; 12-sided: 1/3  \n",
+    "\n",
+    "*Solving*:  \n",
+    "$S_{6side} = \\{1, 2, 3, 4, 5, 6\\}\\ \\ \\ \\rightarrow\\ \\ \\ P(\\ge4) = 3/6 = 1/2$<br>\n",
+    "$S_{12side} = \\{1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12\\}\\ \\ \\ \\rightarrow\\ \\ \\ P(\\ge4) = 9/12 = 3/4$<br>  \n",
+    "\n",
+    "2) Say you're playing a game where the goal is to roll ≥ 4. If you could get your pick, which die would you prefer to play this game with?  \n",
+    "&#9744; 6-sided  \n",
+    "&#9745; 12-sided  \n",
+    "\n",
+    "3) Before we collect any data, you have no idea if I am holding the good die (12-sided) on the right hand or the left hand. Then, what are the probabilities associated with the following hypotheses?  \n",
+    "- $\\text{H}_1$: good die on the Right (bad die on the Left)  \n",
+    "- $\\text{H}_2$: good die on the Left (bad die on the Right)  \n",
+    "\n",
+    "&#9744; $P(\\text{H}_1) = 0.33 \\text{ and } P(\\text{H}_2) = 0.67$  \n",
+    "&#9745; $P(\\text{H}_1) = 0.5 \\text{ and } P(\\text{H}_2) = 0.5$  \n",
+    "&#9744; $P(\\text{H}_1) = 0 \\text{ and } P(\\text{H}_2) = 1$  \n",
+    "&#9744; $P(\\text{H}_1) = 0.25 \\text{ and } P(\\text{H}_2) = 0.75$\n",
+    "\n",
+    "4) You chose the right hand, and you won (rolled a number ≥4). Having observed this data point how, if at all, do the probabilities you assign to the same set of hypotheses change?  \n",
+    "- $\\text{H}_1$: good die on the Right (bad die on the Left)  \n",
+    "- $\\text{H}_2$: good die on the Left (bad die on the Right)  \n",
+    "\n",
+    "&#9744; $P(\\text{H}_1) = 0.5 \\text{ and } P(\\text{H}_2) = 0.5$  \n",
+    "&#9745; $P(\\text{H}_1) \\gt 0.5 \\text{ and } P(\\text{H}_2) \\lt 0.5$  \n",
+    "&#9744; $P(\\text{H}_1) \\lt 0.5 \\text{ and } P(\\text{H}_2) \\gt 0.5$  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
