added bayesian inference

--- a/Coursera/Duke University/Probability-intro/Week 3/2. Conditional Probability.ipynb
+++ b/Coursera/Duke University/Probability-intro/Week 3/2. Conditional Probability.ipynb
@@ -358,7 +358,74 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Examples of Bayesian Inference\n",
+    "\n",
+    "*American Cancer Society estimates that about 1.7% of women have breast cancer.*  \n",
+    "\n",
+    "*Susan G Komen for the Cure Foundation states that mammography correctly identifies about 78% of women who truly have breast cancer.*  \n",
+    "\n",
+    "*An article published in 2003 suggests that up to 10% of all mammograms are false positive.*  \n",
+    "\n",
+    "These probabilities are of course estimates, as they're very difficult to calculate precisely. But we're going to take these as givens for this example. As usual, let's first parse through the percentages we're given. \n",
+    "\n",
+    "$P(\\text{cancer}) = 0.017$<br>\n",
+    "$P(\\text{positive | cancer}) = 0.78$<br>\n",
+    "$P(\\text{positive | not cancer}) = 0.10$<br>\n",
+    "\n",
+    "Prior to any testing, and any information exchange between the patient and the doctor, what probability should a doctor assign to a female patient having breast cancer?\n",
+    "\n",
+    "$P(\\text{cancer}) = 0.017 \\ \\ \\ \\ \\rightarrow \\ \\ \\ \\ \\text{Prior Probability}$<br>\n",
+    "\n",
+    "When a patient goes through breast cancer screening, there are 2 competing claims. Patient has cancer or, and patient doesn't have cancer. If a mammogram yields a positive result what is the probability that patient has cancer?\n",
+    "\n",
+    "In terms of probability the question is asking `P(cancer | positive)`? So, let's first build the probability tree as:\n",
+    "\n",
+    "<img src=\"images/bayesian_example.svg\" align=\"center\" width=\"600\"/>\n",
+    "\n",
+    "We want to know the probability of having breast cancer given the mammogram yields a positive results. Thus, using the Bayesian probability, we have:\n",
+    "\n",
+    "$$P(\\text{cancer | positive}) = \\frac{P(\\text{cancer and positive})}{P(\\text{positive})}$$\n",
+    "\n",
+    "Looking in our probability tree, we calculate:\n",
+    "\n",
+    "$P(\\text{cancer | positive}) = \\frac{0.01326}{0.01326+0.0983}$<br>\n",
+    "$P(\\text{cancer | positive}) = 0.1189 \\approx 0.12 \\ \\ \\ \\ \\rightarrow \\ \\ \\ \\ \\text{Posterior Probability}$<br>\n",
+    "\n",
+    "Since a positive mammogram doesn't necessarily mean that the patient actually has breast cancer, the doctor might decide to retest the patient. What is the probability of having breast cancer if the second mammogram also yields a positive result? \n",
+    "\n",
+    "Now that we have information about the previous iteration, we plug in the prior, the posterior from the previous test. Therefore, the probability of not having breast cancer is updated to be the complement of this, 88%. Now, solving the posterior probability, we have:\n",
+    "\n",
+    "$P(\\text{cancer | positive}) = \\frac{0.0936}{0.0936+0.088}$<br>\n",
+    "$P(\\text{cancer | positive}) = 0.5154 \\approx 0.52$<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Questions\n",
+    "\n",
+    "1) What should the new prior probability that this woman has cancer, given that she already tested positive once, i.e. what is the new prior probability?  \n",
+    "&#9744; 0.017  \n",
+    "&#9745; 0.12  \n",
+    "&#9744; 0.0133  \n",
+    "&#9744; 0.88  \n",
+    "\n",
+    "2) What is the probability of having breast cancer if this second mammogram also yields a positive result, i.e. what is the new posterior probability? Choose the closest answer.  \n",
+    "\n",
+    "<img src=\"images/exerc_2.8.png\" align=\"center\" width=\"600\"/>\n",
+    "\n",
+    "&#9744; 0.0936  \n",
+    "&#9744; 0.088  \n",
+    "&#9744; 0.48  \n",
+    "&#9745; 0.52  \n",
+    "\n",
+    "*Solving*:\n",
+    "\n",
+    "$P(\\text{cancer | positive}) = \\frac{0.0936}{0.0936+0.088}$<br>\n",
+    "$P(\\text{cancer | positive}) = 0.5154 \\approx 0.52$<br>"
+   ]
   }
  ],
  "metadata": {
