Added quiz week 3

--- a/Coursera/Duke University/Probability-intro/Week 3/Quiz.ipynb
+++ b/Coursera/Duke University/Probability-intro/Week 3/Quiz.ipynb
@@ -14,7 +14,7 @@
     "1) Shown below are four Venn diagrams. In which of the diagrams does the shaded area represent A and B and C?\n",
     "\n",
     " \n",
-    "<table align=\"left\">\n",
+    "<table align=\"left\" border=\"0\">\n",
     "    <tr>\n",
     "        <td>&#9744; I.</td>\n",
     "        <td><img src=\"images/quiz_1a.jpg\" align=\"left\" width=\"100\"/></td>\n",
