--- a/Coursera/Duke University/Probability-intro/Week 2/1. Exploring Numerical Data.ipynb
+++ b/Coursera/Duke University/Probability-intro/Week 2/1. Exploring Numerical Data.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "When evaluating the relationship between two numerical variables, we should make sure to examine the direction of the relationship. Is it increasing, or decreasing. The shape of the relationship, i.e., is it linear, or does it follow some other form? The strength of the relationship. Is the relationship strong? Indicated by little scatter. Or weak, indicated by lots of scatter. And any potential outliers.  These can be individual observations or a group of observations. It's always a good idea to investigate these points carefully to make sure they're not data entry errors. \n",
     "\n",
-    "<img src=\"images/evaluating_relationship.png\" align=\"center\" width=\"600\"/>\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/7571604f/Coursera/Duke%20University/Probability-intro/Week%202/images/evaluating_relationship.svg\" align=\"center\" width=\"600\"/>\n",
     "\n",
     "### Histogram\n",
     "\n",
@@ -22,19 +22,19 @@
     "\n",
     "Distributions are set to be skewed to the left side of the long tail. In a left skewed distribution, the longer tail is on the left on the negative end. If no skewness is apparent, then the distribution is said to be symmetric. And in a right skewed distribution, the longer tail is on the right, the positive end. As you can see, the best way to assess the shape of distributions is to step back and imagine a smooth curve outlining the distribution, instead of focusing on the jagged edges of the bars in the histogram. \n",
     "\n",
-    "<img src=\"images/skewness.png\" align=\"center\" width=\"500\"/>\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/c27d9639/Coursera/Duke%20University/Probability-intro/Week%202/images/skewness.svg\" align=\"center\" width=\"500\"/>\n",
     "\n",
     "### Modality\n",
     "\n",
     "A distribution might be unimodal with one prominent peak, bimodal with two prominent peaks, or uniform with no prominent peaks. With more than two prominent peaks a distribution is usually said to be multimodal. The distribution that you will most closely work with is unimodal, the normal distribution, that you may also know as the bell curve. A bimodal distribution might indicate that there are two distinct groups in your data. A uniformed distribution means there's no apparent trend in the data. That high and low values of the variable are equally likely to occur. \n",
     "\n",
-    "<img src=\"images/modality.png\" align=\"center\" width=\"500\"/>\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/59f04e72/Coursera/Duke%20University/Probability-intro/Week%202/images/modality.svg\" align=\"center\" width=\"500\"/>\n",
     "\n",
     "### Visualization using Box plot\n",
     "\n",
     "A box plot also readily displace the median. The mid point of the distribution, this is the thick line inside the box, and the interquartile range, the width of the box. Outliers are represented with circles in this visualization. \n",
     "\n",
-    "<img src=\"images/boxplot.png\" align=\"center\" width=\"300\"/>\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/b19f62f2/Coursera/Duke%20University/Probability-intro/Week%202/images/boxplot.svg\" align=\"center\" width=\"300\"/>\n",
     "\n",
     "\n",
     "### Questions\n",
@@ -68,6 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "## Measures of Center\n",
     "\n",
     "A key characteristic of interest is the center of the distribution, commonly used measures of center are the **mean**, which is simply the arithmetic average. The **median**, which is the mid point of the distribution or in other words the 50th percentile and the **mode** which is the most frequent observation. \n",
@@ -109,7 +110,7 @@
     "\n",
     "So to recap, in the left skewed distribution, the mean is generally smaller than the median. Since the few low valued observations pull the average down, in symmetric distributions the mean and the median are now roughly equal to each other. And in right skewed distributions, the mean is generally higher than the median since the few high valued observations pulled the average up.\n",
     "\n",
-    "<img src=\"images/skew_mean.png\" width=\"700\" align=\"center\"/>\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/6c54fc8b/Coursera/Duke%20University/Probability-intro/Week%202/images/skew_mean.svg\" width=\"700\" align=\"center\"/>\n",
     "\n",
     "\n",
     "### Questions\n",
@@ -199,7 +200,7 @@
     "\n",
     "This measure, is most readily available in a box plot. \n",
     "\n",
-    "<img src=\"images/life_expectancy.png\" align=\"center\" width=\"400\"/>\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/b89b430e/Coursera/Duke%20University/Probability-intro/Week%202/images/life_expectancy.svg\" align=\"center\" width=\"400\"/>\n",
     "\n",
     "In this box plot, the first quartile Q1 is 65, and the third quartile is 77. So the IQR is the difference between these two, 12. In describing the distribution of life expectancies, we can say that the middle 50% of countries, have life expectancies between 65 and 77 years old. The value of the IQR itself, 12, isn't as informative on its own, but would be useful when comparing distributions. The reason why the IQR is a more reliable measure of spread in sample data than the range, which is maximum minus minimum, is that it doesn't rely on the endpoints. Which may be unusual observations or potential outliers. \n",
     "\n",
@@ -217,7 +218,7 @@
     "\n",
     "2) Which of the following sets of cars, has more diverse composition of colors? SET 1 with yellow, red, green, purple and blue colors or, SET 2 with three blue and two purple cars.  \n",
     "&#9745; Set 1 (yellow, red, green, purple, blue)  \n",
-    "&#9744;Set 2 (three blue, two purple)  \n",
+    "&#9744; Set 2 (three blue, two purple)  \n",
     "\n",
     "<br>\n",
     "\n",
@@ -241,6 +242,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "## Robust Statistics\n",
     "\n",
     "Robust statistics is defined as measures on which extreme observations have little effect. For example, we start with a small data set of values between 1 and 6, and the mean and the median for these data are both 3.5. What if we change one of the values in the data set to be much larger? Say 1000. \n",
@@ -332,6 +334,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "## Transforming Data\n",
     "\n",
     "A transformation is a rescaling of the data using a function. It is necessary when data are very strongly skewed. The most commonly used transformation is the natural log transformation, which is often applied when much of the data cluster near zero relative to larger values in the dataset and all observations are positive. \n",
@@ -350,6 +353,15 @@
     "\n",
     "It's difficult to tell just looking at these plots which transformation works better or if either of the transformation actually yield something better than the original data."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
