--- a/Coursera/Duke University/Probability-intro/Week 3/1. Defining Probability.ipynb
+++ b/Coursera/Duke University/Probability-intro/Week 3/1. Defining Probability.ipynb
@@ -505,9 +505,9 @@
     "\n",
     "<img src=\"images/venn_q1.png\" width=\"300\" align=\"center\"/>\n",
     "\n",
-    "$P(agree) = 0.362  \n",
-    "$P(uni. degree) = 0.138  \n",
-    "P(agree & uni. degree) = 0.036  \n",
+    "$P(\\text{agree}) = 0.362$<br>  \n",
+    "$P(\\text{uni. degree}) = 0.138$<br>  \n",
+    "$P(\\text{agree & uni. degree}) = 0.036$<br>  \n",
     "\n",
     "&#9744; $1 - 0.138 = 0.862 \\rightarrow 86.2\\%$  \n",
     "&#9745; $0.102 \\rightarrow 10.2\\%$  \n",
