--- a/Coursera/Duke University/Probability-intro/Week 2/2. Exploring Categorical Variables.ipynb
+++ b/Coursera/Duke University/Probability-intro/Week 2/2. Exploring Categorical Variables.ipynb
@@ -321,7 +321,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Introduction to Inference\n",
+    "---\n",
+    "## Introduction to Inference\n",
     "\n",
     "In 1972, as part of a study on gender discrimination, 48 male bank supervisors were each given the same personnel file, and asked to judge whether the person should be promoted to a branch manager job that was described as routine. The files were identical except that half of the supervisors had files showing the person was male while the other half had files showing the person was female. It was randomly determined which supervisors got male applications and which got female applications. Of the 48 files reviewed 35 were promoted. The study is testing whether females are unfairly discriminated against.\n",
     "\n",
