Changed knowledge check

--- a/edX/ASUx/MAT170x/KnowledgeCheck.ipynb
+++ b/edX/ASUx/MAT170x/KnowledgeCheck.ipynb
@@ -771,13 +771,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Find all solutions of the equation in the interval [0, 2$\\pi$).\n",
-    ", 02π\n",
-    ".\n",
-    "=sinθ0.6387\n",
+    "## Find the solution for sinusoidal function\n",
+    "\n",
+    "Find all solutions of the equation in the interval [0, 2$\\pi$). $sin \\theta = 0.6387$\n",
+    "\n",
     "If there is more than one solution, separate them with commas.\n",
     "Do not round any intermediate computations, and round your answer(s) to the nearest hundredth."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
