--- a/Coursera/Duke University/Probability-intro/Week 4/1. The Normal Distribution.ipynb
+++ b/Coursera/Duke University/Probability-intro/Week 4/1. The Normal Distribution.ipynb
@@ -59,7 +59,7 @@
     "\n",
     "### Standardizing with Z Scores\n",
     "\n",
-    "We define a standardized or Z-score as the number of standard deviations and observations fall below or above the mean. The Z actually comes from the Z in standardize which might sound a little odd, why wouldn't we just use S, the initial letter of the word, but that's because we tend to spare S for standard deviations and we don't want to be confusing our abbreviations. So we're going to be referring to standardized scores as **Z-scores** from this point onwards. We calculate the Z-score of an observation as that observation minus the mean divided by the standard deviation. \n",
+    "We define a standardized or Z-score as the number of standard deviations and observations fall below or above the mean. The Z actually comes from the Z in **standardize** which might sound a little odd, why wouldn't we just use S, the initial letter of the word, but that's because we tend to spare S for standard deviations and we don't want to be confusing our abbreviations. So we're going to be referring to standardized scores as **Z-scores** from this point onwards. We calculate the Z-score of an observation as that observation minus the mean divided by the standard deviation. \n",
     "\n",
     "$$Z = \\frac{\\text{observation} - \\mu}{\\sigma}$$\n",
     "\n",
